Removed non ssl issues. Updated homepage txt. Fixed privacy policy address spacing.

--- a/glynt/apps/default/static/homepage/assets/css/lawpal.css
+++ b/glynt/apps/default/static/homepage/assets/css/lawpal.css
@@ -563,7 +563,7 @@ width:100%;
 height:20px;
 background-color:black;
 opacity:.7;
-padding:3px 0px 0px 0px;
+padding:3px 5px 0px 0px;
 font-size:12px;
 text-align:center;
 font-family:"Helvetica Neue", Helvetica, Arial;
@@ -573,6 +573,11 @@ color:#DDD;
 }
 body #footer a:hover {
 color:#FFF;
+}
+body #footer .credit {
+	padding-right:5px;
+	float:right;
+	color:#bbb;
 }
 a.btn strong {
 font-weight: 500;
